--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A tool to help you learn English words with Anki ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/yakhinvadim/longman-to-anki-plus/issues"
   },
-  "homepage": "https://github.com/yakhinvadim/longman-to-anki-plus#readme"
+  "homepage": "https://github.com/yakhinvadim/longman-to-anki-plus#readme",
+  "dependencies": {
+    "node-fetch": "^1.6.0"
+  }
 }
