--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/yakhinvadim/longman-to-anki-plus#readme",
   "dependencies": {
+    "cheerio": "^0.22.0",
     "node-fetch": "^1.6.0"
   }
 }
